--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <title>Node Simple Server</title>
+  <title><%= title %></title>
 </head>
 <body>
   <div class="container">
@@ -19,6 +19,16 @@
 
       <button class="btn btn-primary" type="submit">Create</button>
     </form>
+
+    <div class="card">
+      <ul class="list-group">
+        <% for (let i = 0; i < notes.length; i++) { %>
+        <li class="list-group-item">
+          <%= notes[i].title %>
+        </li>
+        <% } %>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
