--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -15,7 +15,7 @@
   <% } %>
 
   <div class="container">
-    <h1>This is working</h1>
+    <h1>Express App</h1>
 
     <form action="/" method="post" class="mb-2">
       <div class="form-group mb-2">
@@ -30,8 +30,13 @@
       <ul class="list-group">
         <% for (let i = 0; i < notes.length; i++) { %>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <%= notes[i].title %>
-          <button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">&times;</button>
+          <div class="note-title">
+            <%= notes[i].title %>
+          </div>
+          <div class="d-flex">
+            <button class="btn btn-primary"  data-type="edit" data-id="<%= notes[i].id %>">Edit</button>
+            <button class="btn btn-danger ms-2" data-type="remove" data-id="<%= notes[i].id %>">&times;</button>
+          </div>
         </li>
         <% } %>
       </ul>
